creation of the profile page

--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@
   --popover: oklch(0.97 0 0);
   --popover-foreground: var(--foreground);
 
-  --primary: oklch(0.627 0.257 27.15); /* red */
+  --primary: oklch(52.96% 0.21594 27.14); /* red */
   --primary-foreground: oklch(0.99 0 0); /* white */
 
   --secondary: oklch(0.99 0 0);
